# defio

./: README.md  pyproject.toml
src/defio/client/: __init__.py  client.py  config.py  postgres.py  utils.py
src/defio/client/aurora/: __init__.py  aurora.py
src/defio/client/redshift/: __init__.py  redshift.py
src/defio/dataset/: __init__.py  column_stats.py  dataset.py  s3.py  stats.py  utils.py
src/defio/dataset/imdb/: .gitignore  __init__.py  schema.json
src/defio/dataset/imdb/normalized/: generate.py  schema.sql
src/defio/dataset/imdb/source/: schema.py
src/defio/infra/: constants.py  utils.py
src/defio/infra/components/: aurora.py  ec2.py  iam.py  redshift.py  s3.py  ssm.py  vpc.py
src/defio/infra/helper/: aurora.py  iam.py  redshift.py  vpc.py
src/defio/infra/project/: Pulumi.main.yaml  Pulumi.yaml  __main__.py  output.py
src/defio/main/: collect.py  imdb.py  init_aurora.py  init_redshift.py  s3.py  sampler.py  stats.py  strlen.py
src/defio/main/examples/: runner.py
src/defio/router/: featurizer.py  ml.ipynb
src/defio/sql/: operator.py  parser.py  schema.py
src/defio/sql/ast/: expression.py  from_clause.py  sql.py  statement.py  where_clause.py
src/defio/sqlgen/: generator.py  utils.py
src/defio/sqlgen/ast/: __init__.py  expression.py  from_clause.py  helper.py  sql.py  statement.py  where_clause.py
src/defio/sqlgen/sampler/: aggregate.py  join.py  predicate.py
src/defio/utils/: attrs.py  generator.py  logging.py  queue.py  random.py  sentinel.py  time.py
src/defio/workload/: query.py  reporter.py  runner.py  schedule.py  user.py  workload.py
src/htap/: constants.py
src/htap/client/: client.py  config.py  postgres.py
src/htap/client/aurora/: aurora.py
src/htap/dataset/: dataset.py  utils.py
src/htap/dataset/imdb/: README.md
src/htap/infra/: constants.py  utils.py
src/htap/infra/components/: aurora.py  ec2.py  iam.py  redshift.py  s3.py  vpc.py
src/htap/infra/helper/: aurora.py  ec2.py  iam.py  vpc.py
src/htap/infra/project/: Pulumi.main.yaml  Pulumi.yaml  __main__.py  output.py
src/htap/sql/: operator.py  parser.py  schema.py
src/htap/sql/ast/: expression.py  from_clause.py  statement.py  where_clause.py
src/htap/sqlgen/: generator.py
src/htap/utils/: attrs.py  dataset.py  graph.py  time.py
src/htap/workload/: query.py  runner.py  schedule.py  workload.py
tests/: conftest.py  runner.py
tests/client/: test_config.py
tests/dataset/: test_column_stats.py  test_dataset.py  test_stats.py  test_utils.py
tests/htap/dataset/: test_utils.py
tests/htap/infra/: test_utils.py
tests/htap/infra/helper/: test_iam.py
tests/htap/sql/: test_parser.py  test_schema_imdb.py  test_schema_library.py
tests/htap/utils/: test_attrs.py  test_dataset.py  test_logging.py  test_time.py
tests/infra/: test_utils.py
tests/infra/helper/: test_aurora.py  test_iam.py  test_redshift.py  test_vpc.py
tests/infra/project/: test_output.py
tests/sql/: test_parser.py  test_schema_imdb.py  test_schema_library.py
tests/sqlgen/: test_generator.py
tests/sqlgen/sampler/: test_aggregate.py  test_join.py  test_predicate.py
tests/utils/: test_attrs.py  test_generator.py  test_graph.py  test_logging.py  test_random.py  test_sentinel.py  test_time.py
tests/workload/: test_query.py  test_reporter.py  test_runner.py  test_schedule.py  test_user.py  test_workload.py
