[tool.poetry]
name = "htap"
version = "0.1.0"
description = "MEng Project: Federated Query Routing"
authors = ["dfangs <dfanggohans@gmail.com>"]
readme = "README.md"
packages = [{ include = "htap", from = "src" }]       # Needed for src-based layout

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = "^4.5.0"
attrs = "^22.2.0"
immutables = "^0.19"
numpy = "^1.24.2"
pandas = "^2.0.0"
tqdm = "^4.65.0"
pulumi = "^3.62.0"
pulumi-aws = "^5.35.0"
pulumi-tls = "^4.10.0"
psycopg = { extras = ["binary"], version = "^3.1.8" }
pglast = "^5.1"
pendulum = "^2.1.2"
pytest = "^7.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
black = { extras = ["jupyter"], version = "^23.3.0" }
isort = "^5.12.0"

[tool.pytest.ini_options]
# Put all tests in the specified directory
# Reference: https://docs.pytest.org/en/latest/reference/customize.html
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

### LINTER & FORMATTER SETTINGS ###

[tool.pylint.'MAIN']
# Use `ignore-patterns` instead of `ignore-paths` since the former doesn't allow escape character
# Reference: https://pylint.readthedocs.io/en/latest/user_guide/configuration/all-options.html#ignore-paths
ignore-patterns = ['.*_pb2\.pyi?$', '.*_pb2_grpc\.py$']

[tool.pylint.'BASIC']
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "exc", # Exception
    "at",
    "f",   # File handle
    "p",   # Probability
    "id",
    "sg",  # Security group
]

[tool.pylint.'FORMAT']
# Reference: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
max-line-length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "no-name-in-module",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",

    # False positives caused by `attrs`
    # See https://github.com/ComPWA/ampform/blob/main/.pylintrc for reference
    "no-member",       # Conflict: `Mapping` + `attrs.field()` + `map.items()`
    "not-an-iterable", # Conflict: `Sequence` + `attrs.field(converter=...)`
]

[tool.black]
line-length = 88 # Default value
# Exclude autogenerated Protocol Buffer files anywhere in the project
# Note: Use `force-exclude` instead of `extend-exclude`
# Reference: https://stackoverflow.com/a/73296261/21451742
force-exclude = '.*_pb2\.pyi?$|.*_pb2_grpc\.py$'

[tool.isort]
# Reference: https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"
extend_skip_glob = ["**/*_pb2.py", "**/*_pb2.pyi", "**/*_pb2_grpc.py"]
